Fix in combined fragment widget: Avoid the creation of an undo action for the dashed line of a combined fragment.

BUG:337627
FIXED-IN:2.15.0 (KDE 14.12.0)